Fix alignment on search bar

--- a/app/assets/stylesheets/api/groceries.scss
+++ b/app/assets/stylesheets/api/groceries.scss
@@ -139,7 +139,7 @@
   background-color: #333399;
   color: white;
   border-radius: 5px;
-  border: 1px solid #E6E6FA;
+  border: 1px solid #333399;
   text-align: center;
   margin: 0 15px 20px 15px;
   padding: 6px 10px 6px 10px;
